# bazel-go-lang

./: .envrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go
utils/: BUILD.bazel  main.go
