load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@rules_license//rules_gathering:generate_sbom.bzl", "generate_sbom")


# gazelle:prefix github.com/bazel/golang/test
gazelle(name = "gazelle")

go_binary(
    name = "main",
    embed = [":main_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "main_library",
    srcs = ["main.go"],
    importpath = "github.com/bazel/golang/test",
    visibility = ["//visibility:private"],
    deps = [
        "//utils",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)

go_image(
    name = "main_image",
    embed = [":main_library"],
    deps = [
        "@go_uber_org_zap//:zap",
        "@go_uber_org_multierr//:multierr"
    ],
    visibility = ["//visibility:public"],
)

generate_sbom(
    name = "main_sbom",
    deps = [":main_library"],
    out = "write_sbom.txt",
)